<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/upper_welcome_area"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/welcome_page_area">

        <TextView
            android:id="@+id/how_many_learned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_centerVertical="true"
            android:textColor="@color/teal_200"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/start_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="5sp"
            android:text="@string/start_training"
            android:paddingHorizontal="5sp"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/count_words"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:gravity="center"
                android:textColor="@color/teal_200"
                android:textSize="13sp"/>

            <Space
                android:layout_width="3sp"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/change_count"
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:contentDescription="@string/change_count"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/change_count" />

            <Space
                android:layout_width="10sp"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/log_out"
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:contentDescription="@string/log_out"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/logout" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upper_welcome_area"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginBottom="30sp"
        android:background="@drawable/welcome_page_area"
        android:visibility="invisible">

        <ListView
            android:id="@+id/list_with_words"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:layout_above="@+id/accept_button"/>

        <Button
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-15dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/change_word_count_layout"
        android:layout_width="40sp"
        android:layout_height="200sp"
        android:layout_below="@+id/upper_welcome_area"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="75sp"
        android:layout_marginTop="5sp"
        android:background="@drawable/welcome_page_area"
        android:visibility="invisible">

        <NumberPicker
            android:id="@+id/change_word_count_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10sp"
            android:layout_above="@+id/accept_change_count"/>

        <ImageButton
            android:id="@+id/accept_change_count"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:scaleType="centerInside"
            android:contentDescription="@string/accept_changes"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/accept"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</RelativeLayout>